Fotos agregadas y css .responsive agregado

--- a/cartaRestoBar/styles.css
+++ b/cartaRestoBar/styles.css
@@ -37,6 +37,11 @@ body {
     float: right;
     font-weight: bold;
   }
+
+  .responsive {
+    width: 50%;
+    height: auto;
+  }
   
   /* Agrega más estilos personalizados aquí */
   
