--- a/cartaRestoBar/styles.css
+++ b/cartaRestoBar/styles.css
@@ -1,4 +1,5 @@
 body {
+    background-image: url(https://images.pexels.com/photos/1843717/pexels-photo-1843717.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2);
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 1;
