--- a/cartaRestoBar/styles.css
+++ b/cartaRestoBar/styles.css
@@ -31,6 +31,8 @@ body {
     box-shadow: 
       -2px -2px 5px rgb(237, 127, 127),
       2px 2px 5px rgba(247, 85, 85, 0.986);
+    background-color: rgb(247, 80, 80);
+    
   }
   
   
