--- a/cartaRestoBar/styles.css
+++ b/cartaRestoBar/styles.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url(https://images.pexels.com/photos/1843717/pexels-photo-1843717.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2);
+  background-image: url(https://i.pinimg.com/originals/ee/72/52/ee7252b9168bfc4ced1a2edb8641603f.png);
   font-family: 'DM Sans', sans-serif;
   margin: 0;
   padding: 1;
@@ -49,6 +49,7 @@ nav a:hover {
   padding: 10px;
 }
 
+
 .menu-section {
   margin: 40px 0;
 }
@@ -56,8 +57,21 @@ nav a:hover {
 .menu-item {
   border: 1px solid #ccc;
   padding: 10px;
-  margin-bottom: 10px;
   box-shadow: inset 0 0 20px rgba(0, 0, 0, 0.1);
+  flex: 1; 
+  max-width: calc(33.33% - 20px); 
+  box-sizing: border-box;
+}
+
+.menu-items-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between; 
+  gap: 20px; 
+}
+
+.menu-item .price {
+  display: block;
 }
 
 .price {
@@ -70,12 +84,10 @@ nav a:hover {
   margin-left: auto;
 }
 
-.menu-item .price {
-  display: block;
-}
+
 
 .responsive {
-  width: 20%;
+  width: 50%;
   height: auto;
 }
 
@@ -111,5 +123,6 @@ nav a:hover {
 
 .imgBorder img {
   width: 100%;
-  height: auto;
+  height: 100%;
+  object-fit: cover;
 }
