--- a/cartaRestoBar/styles.css
+++ b/cartaRestoBar/styles.css
@@ -96,6 +96,7 @@ nav a:hover {
   color: #ead6d6;
   padding: 2px;
   background: #f61717;
+  text-align: center;
 }
 
 .social-buttons {
@@ -105,6 +106,7 @@ nav a:hover {
 #footer a {
   color: #ead6d6;
   font-size: 25px;
+  
 }
 
 #footer a:hover {
