--- a/cartaRestoBar/styles.css
+++ b/cartaRestoBar/styles.css
@@ -150,6 +150,7 @@ nav a:hover {
 .paragraph2 {
   display: flex;
   padding: 0px;
+  margin: 5px;
   justify-content: center;
   transform: translateY(-440px);
 }
@@ -157,6 +158,7 @@ nav a:hover {
 .paragraph3 {
   display: flex;
   padding: 0px;
+  margin: 10px;
   justify-content: center;
   transform: translateY(-400px);
 }
@@ -164,6 +166,7 @@ nav a:hover {
 .paragraph4 {
   display: flex;
   padding: 0px;
+  margin: 10px;
   justify-content: center;
   transform: translateY(-415px);
 }
@@ -171,6 +174,7 @@ nav a:hover {
 .paragraph5 {
   display: flex;
   padding: 0px;
+  margin: 10px;
   justify-content: center;
   transform: translateY(-360px);
 }
