--- a/cartaRestoBar/styles.css
+++ b/cartaRestoBar/styles.css
@@ -166,7 +166,7 @@ nav a:hover {
   display: flex;
   padding: 0px;
   justify-content: center;
-  margin-right: 30px;
+  margin-left: 40px;
   transform: translateY(-415px);
 }
 
@@ -174,7 +174,7 @@ nav a:hover {
   display: flex;
   padding: 0px;
   justify-content: center;
-  margin-right: 20px;
+  margin-left: 30px;
   transform: translateY(-360px);
 }
 /* esto hay que cambiar para arreglar lo de las columnas*/
