--- a/cartaRestoBar/styles.css
+++ b/cartaRestoBar/styles.css
@@ -3,7 +3,7 @@ body {
   font-family: 'DM Sans', sans-serif;
   margin: 0;
   padding: 0;
-  0
+  
 }
 
 
@@ -199,6 +199,17 @@ input[type=submit] {
   border: none;
   border-radius: 4px;
   cursor: pointer;
+}
+
+button[id="botonEnvio"] {
+    width: 100%;
+    background-color: rgb(247, 80, 80);
+    color: white;
+    padding: 14px 20px;
+    margin: 8px 0;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
 }
 
 input[type=submit]:hover {
